Доработка перед перзентацией
